# ffpresnap

./: .gitignore  README.md  pyproject.toml
docs/: development.md  schema.md  tools.md  troubleshooting.md
docs/brainstorms/: 2026-04-26-sleeper-sync-and-team-depth-chart-requirements.md  2026-04-26-studies-and-mentions-requirements.md  2026-04-27-prompt-library-and-onboarding-artifact-requirements.md  2026-04-28-ourlads-sync-requirements.md  2026-04-29-feed-ingestion-32beatwriters-requirements.md
docs/plans/: 2026-04-26-001-feat-nfl-notes-mcp-plan.md  2026-04-26-001-feat-sleeper-sync-and-team-depth-chart-plan.md  2026-04-26-002-feat-studies-and-mentions-plan.md  2026-04-27-001-feat-prompt-library-and-onboarding-artifact-plan.md  2026-04-28-001-feat-ourlads-sync-plan.md  2026-04-29-001-feat-feed-ingestion-32beatwriters-plan.md
src/ffpresnap/: _naming.py  cli.py  db.py  ourlads.py  prompt_loader.py  server.py  sleeper.py  sync.py  teams.py
src/ffpresnap/feeds/: _32beatwriters.py  __init__.py  _base.py  _registry.py
src/ffpresnap/prompts/: depth-chart-explorer.md  mention-graph.md  note-recency-feed.md  player-card.md  player-explorer.md  show-prompt-library.md  study-browser.md  team-explorer.md  team-overview.md  watchlist.md
tests/: test_cli.py  test_db.py  test_db_feed_items.py  test_feed_32beatwriters.py  test_feeds_registry.py  test_naming.py  test_ourlads.py  test_prompt_loader.py  test_server.py  test_server_sync_tool.py  test_sleeper.py  test_sync.py  test_sync_feed.py  test_sync_feed_rematch.py  test_upsert.py
tests/fixtures/32beatwriters/: page1.json  (+1 more)
(+2 files in other folders)
