[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ffpresnap"
version = "0.1.0"
description = "Local SQLite store for NFL player notes, exposed via MCP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0.0",
  "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
ffpresnap-mcp = "ffpresnap.server:main"
ffpresnap-sync = "ffpresnap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ffpresnap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
